# simple-redis

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
src/: main.py
src/domain/model/: resp_decoder.py
