[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-redis"
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.optional-depndencies]
dev = [
  "black==23.3.0",
  "isort==5.12.0",
  "flake8==6.0.0",
  "mypy==1.3.0",
  "tox==4.5.1"
]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
strict = true
