[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fum1t0.simple-redis"
version = "0.0.1"
description = ""
authors = [
  { name = "Fumito Konaka", email = "fum1t0.eng@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
  "black==23.3.0",
  "isort==5.12.0",
  "flake8==6.0.0",
  "mypy==1.3.0",
  "pre-commit==3.3.2"
]
test = [
 "pytest==7.3.1",
 "tox==4.5.1" 
]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
disallow_subclassing_any = false

# [[tool.mypy.overrides]]
# ignore_missing_imports = true
# module = []